tdf#149470: Firebird, Clob may need several segments to store a very long input

Change-Id: I85c7789f46d834d2ae1b251f915382f833bd529d